CREATE-3271: finished woehler curve related prototype
Signed-off-by: Gyongyver Kiss <gyongyver.kiss@hu.bosch.com>

--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -68,12 +68,14 @@
     "from pylife.materialdata.woehler.fatigue_data import FatigueData\n",
     "from pylife.materialdata.woehler.woehler_curve_creator import WoehlerCurveCreator\n",
     "from pylife.materialdata.woehler.probability_plot_creator import ProbabilityPlotCreator\n",
-    "from pylife.materialdata.woehler.plot_woehler_curve_data import PlotWoehlerCurveData\n",
+    "from pylife.materialdata.woehler.woehler_curve_diagrams import WoehlerCurveDiagrams\n",
     "from pylife.materialdata.woehler.plot_probability_plot_finite import PlotProbabilityPlotFinite\n",
     "from pylife.materialdata.woehler.plot_probability_plot_infinite import PlotProbabilityPlotInfinite\n",
     "from pylife.materialdata.woehler.woehler_curve_widgets import WoehlerCurveWidgets\n",
-    "from pylife.materialdata.woehler.radio_button_file_display import RadioButtonFileDisplay\n",
-    "from pylife.materialdata.woehler.woehler_curve_data_plotter import  WoehlerCurveDataPlotter"
+    "from pylife.materialdata.woehler.data_file_display import DataFileDisplay\n",
+    "from pylife.materialdata.woehler.woehler_curve_creator_options import  WoehlerCurveCreatorOptions\n",
+    "from pylife.materialdata.woehler.woehler_curve_data_plotter import  WoehlerCurveDataPlotter\n",
+    "from pylife.materialdata.woehler.whole_woehler_curve_plotter import  WholeWoehlerCurvePlotter"
    ]
   },
   {
@@ -156,7 +158,7 @@
    "source": [
     "data = pd.read_csv(file_name, sep='\\t')\n",
     "data.columns=['loads', 'cycles']\n",
-    "rb = RadioButtonFileDisplay(['Head of the data', 'Details of the data'], 'File display selection', data)"
+    "rb = DataFileDisplay(data)"
    ]
   },
   {
@@ -188,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "autoscroll": false,
     "ein.hycell": false,
@@ -231,40 +233,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "autoscroll": false,
-    "ein.hycell": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5399894293f94a60a07d139de2dcaad6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tab(children=(Text(value='', description='k_1'), Text(value='', description='1/TN'), Text(value='', descriptio…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "woehler_curve_widgets = WoehlerCurveWidgets()\n",
-    "tab = woehler_curve_widgets.WL_param()\n",
-    "display(tab)"
+    "fatigue_data = FatigueData(data, ld_cyc_lim)\n",
+    "woehler_curve_creator_options = WoehlerCurveCreatorOptions(fatigue_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "autoscroll": false,
     "ein.hycell": false,
@@ -273,26 +252,9 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Maximum Likelihood Method:\n",
-      "\n",
-      "Estimated Parameters:\n",
-      "k_1\n",
-      "1/TN\n",
-      "SD_50\n",
-      "1/TS\n",
-      "ND_50\n",
-      "\n",
-      "Fixed Parameters:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "fixed_param, estim_param =  woehler_curve_widgets.WL_param_display(tab)"
+    "woehler_curve_widgets = WoehlerCurveWidgets()"
    ]
   },
   {
@@ -305,105 +267,6 @@
    },
    "source": [
     "#### 4. Variable definition of class WoehlerCurve:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "autoscroll": false,
-    "ein.hycell": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimization terminated successfully.\n",
-      "         Current function value: 18.908399\n",
-      "         Iterations: 514\n",
-      "         Function evaluations: 728\n"
-     ]
-    }
-   ],
-   "source": [
-    "warnings.filterwarnings('ignore')\n",
-    "#pdb.set_trace()\n",
-    "fatigue_data = FatigueData(data, ld_cyc_lim)\n",
-    "woehler_curve_creator = WoehlerCurveCreator(fatigue_data)\n",
-    "woehler_curve = woehler_curve_creator.maximum_like_procedure(fixed_param)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### 5. Paramter results of the chosen evaluation method\n",
-    "##### Colored parameters: estimated\n",
-    "##### Black/white paramters: fixed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "autoscroll": false,
-    "ein.hycell": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Maximum Likelihood 5 Param method:\n",
-      "\n",
-      "\u001b[91m\u001b[1mEndurance SD50 = \u001b[1;34m293.5\n",
-      "\u001b[91m\u001b[1mEndurance load-cycle ND50 = \u001b[1;34m1.40e+06\n",
-      "\u001b[91m\u001b[1mDeviation in load direction 1/TS = \u001b[1;34m1.11\n",
-      "\u001b[91m\u001b[1mSlope k = \u001b[1;34m8.66\n",
-      "\u001b[91m\u001b[1mDeviation in load-cycle direction 1/TN = \u001b[1;34m9.86\n"
-     ]
-    }
-   ],
-   "source": [
-    "estim_param.update(woehler_curve.curve_parameters)\n",
-    "all(map(estim_param.pop, fixed_param))\n",
-    "\n",
-    "woehler_curve_widgets.print_mali_5p_result(woehler_curve, fixed_param)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "source": [
-    "| Variables              || Explanation                                          |\n",
-    "| :-------------         ||:-------------                                        |\n",
-    "| `fixed_param`          || Fixed parameters (by user)                           |\n",
-    "| `estim_param`          || Estimated parameters (exluding the fixed parameters) |\n",
-    "|`WC_data.Mali_5p_result`|| Estimated & fixed parameters                         |\n",
-    "|`WC_data.Mali_2p_result`|| MLE likelihood functions for the infinite-life zone  |\n",
-    "|`WC_data.k`             || Basquin slope using linear regression                |\n",
-    "|`WC_data.TN`            || Scatter in load-cycle direction using pearl-chain    |\n",
-    "|`WC_data.TS`            || Scatter in load direction using Koeder formula       |\n",
-    "|`WC_data.Probit_result` || Probit parameter results                             |\n"
    ]
   },
   {
@@ -438,11 +301,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "woehler_curve_data_plotter = WoehlerCurveDataPlotter(woehler_curve)\n"
+    "woehler_curve_data_plotter = WoehlerCurveDataPlotter(woehler_curve_creator_options.woehler_curve)"
    ]
   },
   {
@@ -459,19 +322,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PlotWC = PlotWoehlerCurveData(woehler_curve)\n",
-    "#PlotWC.plot_whole_woehler_curve_graph(0, ax)\n",
-    "#PlotWC.plot_whole_woehler_curve_graph(woehler_curve.k, ax)\n",
-    "PlotWC.plot_whole_woehler_curve_graph(2*woehler_curve.k-1)"
+    "whole_woeler_curve_plotter = WholeWoehlerCurvePlotter(woehler_curve_creator_options.woehler_curve)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +344,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d97d381625d43e5bd5ea4ea064feeb0",
+       "model_id": "b108e209f79c46888ff03f69102604bc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -504,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
